@@ -10,6 +10,7 @@ launchpad-buildd (190) UNRELEASED; urgency=medium
   * Adjust X-LXD-mode header construction for Python 3.
   * Treat build logs as binary files.
   * Treat build output files as binary files.
+  * Treat intltool-related files as binary files.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 28 Apr 2020 10:19:27 +0100
 
